# neuromesh-cgal

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
docs/: cgal_reference.md  repair_strategy.md
src/: cli_common.hpp  defaults.hpp  mesh_partition.cpp  mesh_remesh.cpp  mesh_repair.cpp  mesh_segmentation.cpp  mesh_simplify.cpp  mesh_smooth.cpp  segment_examples.md  segment_merge.hpp
